# cursorprojects

./: .gitignore  README.md
.cursor/plans/: 登录与权限管理系统_39b9a906.plan.md
authz/: README.md
authz/config/: application-prod.yml
backend/: pom.xml
backend/src/main/java/com/example/authz/: AuthzApplication.java
backend/src/main/java/com/example/authz/api/: AuthController.java  PingController.java  RestExceptionHandler.java
backend/src/main/java/com/example/authz/bootstrap/: DataInitializer.java
backend/src/main/java/com/example/authz/config/: AppConfig.java  AppSecurityProperties.java
backend/src/main/java/com/example/authz/domain/: AuditLogEntity.java  MenuEntity.java  RoleEntity.java  (+4 more)
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__init.sql
backend/src/test/java/com/example/authz/: AuthzApplicationTests.java  GuoqiangUserCreateApiTest.java  RoleCreateApiTest.java  UserAssignRole3ToUser24Test.java  UserAssignRolesApiTest.java  UserCreateApiTest.java  UserCreateTestUserApiTest.java  UserDelete24ApiTest.java  UserListApiTest.java  UserManagementApiOrderedIT.java  UserResetPasswordApiTest.java  UserStatusApiTest.java  UserStatusDisable19Test.java
backend/src/test/resources/: application-test.yml
dev-front/: index.html  package-lock.json  package.json  vite.config.js
dev-front/src/: App.vue
dev-front/src/components/: GlobeBackground.vue
fixtest/: README.md  pyproject.toml  requirements.txt
fixtest/config/: FIX44.xml  fix_client.cfg
fixtest/src/fixtest/: __main__.py  app.py  application.py  messages.py
(+21 files in other folders)
